# seriate

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
artifacts/live/logprob-reality-2026-07-04/: README.md  reports.jsonl  stderr.txt  table.txt
docs/: ARCHITECTURE.md  SALVAGE.md
src/: atom.rs  capture.rs  compile.rs  evidence.rs  gateway.rs  lib.rs  log.rs  main.rs  ontology.rs  probe.rs  record.rs
src/instrument/: kwise.rs  mod.rs  ordinal.rs  ratio_letter.rs  scalar.rs
tests/: integration_battery.rs
